--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,8 @@ services:
       - SEAFILE_ADMIN_PASSWORD=${SEAFILE_ADMIN_PASSWORD}
       - REVERSE_PROXY_MODE=${REVERSE_PROXY_MODE}
     volumes:
-      - ./data/seafile-exposed:/seafile
-      - ./data/seahub-exposed:/seahub
-      - ./data/seafile-opt:/opt/seafile
+      - ./data/seafile:/seafile
+      - ./data/seahub:/seahub
     restart: always
     depends_on:
       - mysql-seafile
@@ -43,8 +42,7 @@ services:
     image: nginx:mainline-alpine
     volumes:
       - ./data/conf/nginx:/etc/nginx/conf.d
-      - ./data/seahub-exposed:/var/www/seahub
-      - ./data/seafile-opt:/opt/seafile
+      - ./data/seahub:/var/www/seahub
     restart: always
     depends_on:
       - seafile
