--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     restart: always
     depends_on:
       - mysql-seafile
-      #- memcached-seafile
+      - memcached-seafile
     networks: 
       seafile-network:
 
@@ -52,13 +52,13 @@ services:
           - nginx
       proxy-network:
 
-  #memcached-seafile:
-  #  image: memcached:alpine
-  #  restart: always
-  #  networks:
-  #    seafile-network:
-  #      aliases:
-  #        - memcached
+  memcached-seafile:
+    image: memcached:alpine
+    restart: always
+    networks:
+      seafile-network:
+        aliases:
+          - memcached
 
 networks:
   seafile-network:
