Added debug mode memcached

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,8 @@ services:
 
   memcached-seafile:
     image: memcached:alpine
+    environment:
+      - MEMCACHED_DEBUG_MODE=yes
     restart: always
     networks:
       seafile-network:
