Changed exposed paths

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - SEAFILE_ADMIN_PASSWORD=${SEAFILE_ADMIN_PASSWORD}
       - REVERSE_PROXY_MODE=${REVERSE_PROXY_MODE}
     volumes:
-      - ./data/seafile:/seafile
-      - ./data/seahub:/seahub
+      - /smb-share/seafile/seafile:/seafile
+      - /smb-share/seafile/seahub:/seahub
     restart: always
     depends_on:
       - mysql-seafile
@@ -42,7 +42,7 @@ services:
     image: nginx:mainline-alpine
     volumes:
       - ./data/conf/nginx:/etc/nginx/conf.d
-      - ./data/seahub:/var/www/seahub
+      - /smb-share/seafile/seahub:/var/www/seahub
     restart: always
     depends_on:
       - seafile
