--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -15,8 +15,8 @@ server {
     access_log /dev/stdout;
     error_log  /dev/stderror;
 
-    #set_real_ip_from 5.1.92.0/24;
-    #real_ip_header X-Forwarded-For;
+    set_real_ip_from 5.1.92.0/24;
+    real_ip_header X-Forwarded-For;
 
     location / {
         proxy_pass         http://seafile:8000;
