Moved seafile to volume

--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -47,6 +47,7 @@ server {
     }
 
     location /media {
-        root /var/www/seahub;
+        #root /var/www/seahub;
+        root /opt/seafile/seahub;
     }
 }
