--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,9 @@ services:
       - REVERSE_PROXY_MODE=${REVERSE_PROXY_MODE}
     volumes:
       - ./data/seafile:/seafile
-      - ./data/seahub:/seahub
-      - /smb-share/seafile-share:/seafile-share
+      #- ./data/seahub:/seahub
+      - seafile-vol-1:/opt/seafile
+      - /smb-share/seafile-share:/seafile-share 
     restart: always
     depends_on:
       - mysql-seafile
@@ -43,7 +44,8 @@ services:
     image: nginx
     volumes:
       - ./data/conf/nginx:/etc/nginx/conf.d
-      - ./data/seahub:/var/www/seahub
+      #- ./data/seahub:/var/www/seahub
+      - seafile-vol-1:/opt/seafile
     restart: always
     depends_on:
       - seafile
@@ -75,3 +77,4 @@ networks:
 
 volumes:
   mysql-vol-1:
+  seafile-vol-1:
