--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -48,6 +48,6 @@ server {
 
     location /media {
         #root /var/www/seahub;
-        root /opt/seafile/seahub;
+        root /opt/seafile/seafile-server-latest/seahub;
     }
 }
