--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -1,5 +1,5 @@
 server_tokens off;
-#proxy_cache_path /tmp levels=1:2 keys_zone=seafile:10m inactive=24h  max_size=1g;
+proxy_cache_path /tmp levels=1:2 keys_zone=seafile:10m inactive=24h  max_size=1g;
 server_names_hash_bucket_size 64;
 
 server {
@@ -24,7 +24,14 @@ server {
         proxy_set_header   X-Real-IP $remote_addr;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Host $server_name;
-        proxy_read_timeout  1200s;
+        proxy_read_timeout 1200s;
+
+        # proxy caching
+        proxy_buffering        on;
+        proxy_cache            STATIC;
+        proxy_cache_valid      200  1d;
+        proxy_cache_use_stale  error timeout invalid_header updating 
+                               http_500 http_502 http_503 http_504;
 
         # used for view/edit office file via Office Online Server
         client_max_body_size 0;
@@ -33,7 +40,6 @@ server {
     location /seafhttp {
         rewrite ^/seafhttp(.*)$ $1 break;
         proxy_pass http://seafile:8082;
-        client_max_body_size 0;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
 
         proxy_connect_timeout  36000s;
@@ -41,7 +47,15 @@ server {
         proxy_send_timeout  36000s;
 
         send_timeout  36000s;
-        
+        client_max_body_size 0;
+
+        # proxy caching
+        proxy_buffering        on;
+        proxy_cache            STATIC;
+        proxy_cache_valid      200  1d;
+        proxy_cache_use_stale  error timeout invalid_header updating 
+                               http_500 http_502 http_503 http_504;
+
         # support file uploads larger than 4GB
         proxy_request_buffering off;
     }
