Changed proxy cache config

--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -28,10 +28,11 @@ server {
 
         # proxy caching
         proxy_buffering        on;
-        proxy_cache            STATIC;
+        proxy_cache            seafile;
         proxy_cache_valid      200  1d;
         proxy_cache_use_stale  error timeout invalid_header updating 
                                http_500 http_502 http_503 http_504;
+        add_header             X-Proxy-Cache $upstream_cache_status;
 
         # used for view/edit office file via Office Online Server
         client_max_body_size 0;
@@ -51,10 +52,11 @@ server {
 
         # proxy caching
         proxy_buffering        on;
-        proxy_cache            STATIC;
+        proxy_cache            seafile;
         proxy_cache_valid      200  1d;
         proxy_cache_use_stale  error timeout invalid_header updating 
                                http_500 http_502 http_503 http_504;
+        add_header             X-Proxy-Cache $upstream_cache_status;
 
         # support file uploads larger than 4GB
         proxy_request_buffering off;
