Improved proxy cache of nginx

--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -29,7 +29,9 @@ server {
         # proxy caching
         proxy_buffering        on;
         proxy_cache            seafile;
+        proxy_cache_valid      any  10m; 
         proxy_cache_valid      200  1d;
+        proxy_cache_bypass     $http_cache_control;
         proxy_cache_use_stale  error timeout invalid_header updating 
                                http_500 http_502 http_503 http_504;
         add_header             X-Proxy-Cache $upstream_cache_status;
@@ -53,7 +55,9 @@ server {
         # proxy caching
         proxy_buffering        on;
         proxy_cache            seafile;
+        proxy_cache_valid      any  10m; 
         proxy_cache_valid      200  1d;
+        proxy_cache_bypass     $http_cache_control;
         proxy_cache_use_stale  error timeout invalid_header updating 
                                http_500 http_502 http_503 http_504;
         add_header             X-Proxy-Cache $upstream_cache_status;
