--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -2,11 +2,21 @@ server_tokens off;
 proxy_cache_path /tmp levels=1:2 keys_zone=seafile:10m inactive=24h  max_size=1g;
 server_names_hash_bucket_size 64;
 
+map $sent_http_content_type $expires {
+    default                    off;
+    text/html                  epoch;
+    text/css                   max;
+    application/javascript     max;
+    ~image/                    max;
+}
+
 server {
     listen 80;
     server_name "";
 
     proxy_set_header X-Forwarded-For $remote_addr;
+    
+    expires $expires;
 
     include /etc/nginx/mime.types;
     charset utf-8;
