--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -1,7 +1,10 @@
 server_tokens off;
-proxy_cache_path /tmp levels=1:2 keys_zone=seafile:10m inactive=24h  max_size=1g;
 server_names_hash_bucket_size 64;
 
+# define proxy caching
+proxy_cache_path /tmp levels=1:2 keys_zone=seafile:10m inactive=24h  max_size=1g;
+
+# create map for cache-control headers
 map $sent_http_content_type $expires {
     default                    off;
     text/html                  epoch;
@@ -16,6 +19,7 @@ server {
 
     proxy_set_header X-Forwarded-For $remote_addr;
     
+    # add cache-control headers
     expires $expires;
 
     include /etc/nginx/mime.types;
@@ -25,6 +29,7 @@ server {
     access_log /dev/stdout;
     error_log  /dev/stderror;
 
+    # transfer to real ip from upstream proxy
     set_real_ip_from 172.99.1.0/24;
     real_ip_header X-Forwarded-For;
 
