Removed proxy caching

--- a/data/conf/nginx/nginx.conf
+++ b/data/conf/nginx/nginx.conf
@@ -2,7 +2,7 @@ server_tokens off;
 server_names_hash_bucket_size 64;
 
 # define proxy caching
-proxy_cache_path /tmp levels=1:2 keys_zone=seafile:10m inactive=24h  max_size=1g;
+#proxy_cache_path /tmp levels=1:2 keys_zone=seafile:10m inactive=24h  max_size=1g;
 
 # create map for cache-control headers
 map $sent_http_content_type $expires {
@@ -18,9 +18,6 @@ server {
     server_name "";
 
     proxy_set_header X-Forwarded-For $remote_addr;
-    
-    # add cache-control headers
-    expires $expires;
 
     include /etc/nginx/mime.types;
     charset utf-8;
@@ -42,14 +39,14 @@ server {
         proxy_read_timeout 1200s;
 
         # proxy caching
-        proxy_buffering        on;
-        proxy_cache            seafile;
-        proxy_cache_valid      any  10m; 
-        proxy_cache_valid      200  1d;
-        proxy_cache_bypass     $http_cache_control;
-        proxy_cache_use_stale  error timeout invalid_header updating 
-                               http_500 http_502 http_503 http_504;
-        add_header             X-Proxy-Cache $upstream_cache_status;
+        #proxy_buffering        on;
+        #proxy_cache            seafile;
+        #proxy_cache_valid      any  10m; 
+        #proxy_cache_valid      200  1d;
+        #proxy_cache_bypass     $http_cache_control;
+        #proxy_cache_use_stale  error timeout invalid_header updating 
+        #                       http_500 http_502 http_503 http_504;
+        #add_header             X-Proxy-Cache $upstream_cache_status;
 
         # used for view/edit office file via Office Online Server
         client_max_body_size 0;
@@ -68,20 +65,23 @@ server {
         client_max_body_size 0;
 
         # proxy caching
-        proxy_buffering        on;
-        proxy_cache            seafile;
-        proxy_cache_valid      any  10m; 
-        proxy_cache_valid      200  1d;
-        proxy_cache_bypass     $http_cache_control;
-        proxy_cache_use_stale  error timeout invalid_header updating 
-                               http_500 http_502 http_503 http_504;
-        add_header             X-Proxy-Cache $upstream_cache_status;
+        #proxy_buffering        on;
+        #proxy_cache            seafile;
+        #proxy_cache_valid      any  10m; 
+        #proxy_cache_valid      200  1d;
+        #proxy_cache_bypass     $http_cache_control;
+        #proxy_cache_use_stale  error timeout invalid_header updating 
+        #                       http_500 http_502 http_503 http_504;
+        #add_header             X-Proxy-Cache $upstream_cache_status;
 
         # support file uploads larger than 4GB
         proxy_request_buffering off;
     }
 
     location /media {
+        # add cache-control headers
+        expires $expires;
+        
         root /opt/seafile/seafile-server-latest/seahub;
     }
 }
